# 5-MLOPS-Complete-ML-Pipeline

./: .gitignore  README.md  dvc.yaml  main.py  params.yaml  projectflow.txt  pyproject.toml
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: accuracy.tsv  precision.tsv  recall.tsv
experiments/: mynotebook.ipynb
models/: model.pkl
src/: Pre_processing.py  data_ingestion.py  feature_engineering.py  model_building.py  model_evaluation.py
